--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/Theme.AppleMarket"
         tools:targetApi="31">
         <activity
-            android:name=".Detail.DetailActivity"
+            android:name=".main.DetailActivity"
             android:exported="false" />
         <activity
             android:name=".main.MainActivity"
